{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 12721,
  "lineage": "7533d789-0b13-1942-6022-bc3628f068e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dr_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bde9a6ad653f2c3f",
            "arn": "arn:aws:ec2:us-west-1:904233103130:elastic-ip/eipalloc-0bde9a6ad653f2c3f",
            "domain": "vpc",
            "id": "eipalloc-0bde9a6ad653f2c3f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-52-170-130.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.170.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-dr-nat"
            },
            "tags_all": {
              "Name": "eip-dr-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a099e54d589ad82",
            "arn": "arn:aws:ec2:us-east-1:904233103130:elastic-ip/eipalloc-06a099e54d589ad82",
            "domain": "vpc",
            "id": "eipalloc-06a099e54d589ad82",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-208-32-186.compute-1.amazonaws.com",
            "public_ip": "54.208.32.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-prod-nat"
            },
            "tags_all": {
              "Name": "eip-prod-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:904233103130:instance/i-0400be2e43d5812b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0400be2e43d5812b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9e49ef822bc33be",
            "private_dns": "ip-172-20-2-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.2.10",
            "public_dns": "ec2-13-221-222-40.compute-1.amazonaws.com",
            "public_ip": "13.221.222.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085fc0a12afc76d23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b593d7a85b17ca0b",
            "tags": {
              "Name": "linux-backend-est-1"
            },
            "tags_all": {
              "Name": "linux-backend-est-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc1f215113eacb80"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_east",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddac4b9aed8d5d46",
            "arn": "arn:aws:ec2:us-west-1:904233103130:instance/i-0dd6d32906ad36cd9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd6d32906ad36cd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf0d8718a2ae39ec",
            "private_dns": "ip-172-20-2-37.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.2.37",
            "public_dns": "ec2-18-144-30-35.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.30.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc1df2ba14315b09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0198a5116741da7e8",
            "tags": {
              "Name": "linux-backend-west-1"
            },
            "tags_all": {
              "Name": "linux-backend-west-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0210929a0fe86e48d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_west",
            "aws_security_group.web_sg_west",
            "aws_subnet.dr",
            "aws_vpc.dr",
            "data.aws_ami.ubuntu_west",
            "tls_private_key.auto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:904233103130:instance/i-0caaacfb5f3ace4b0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caaacfb5f3ace4b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0280113f9235f0a57",
            "private_dns": "ip-172-20-1-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.91",
            "public_dns": "ec2-3-218-141-117.compute-1.amazonaws.com",
            "public_ip": "3.218.141.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e78e57489396e68c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d47737bcd81aa780",
            "tags": {
              "Name": "bastion-east"
            },
            "tags_all": {
              "Name": "bastion-east"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0904faf16124dee30"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_east",
            "aws_security_group.bastion_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddac4b9aed8d5d46",
            "arn": "arn:aws:ec2:us-west-1:904233103130:instance/i-0c1e4a3d539be80a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1e4a3d539be80a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0204c35076b023a",
            "private_dns": "ip-172-20-1-198.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.198",
            "public_dns": "ec2-13-57-226-83.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.226.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050ca938c429dc483",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d138f4f702cc156",
            "tags": {
              "Name": "bastion-west"
            },
            "tags_all": {
              "Name": "bastion-west"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6bba4c16a40b230"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_west",
            "aws_security_group.bastion_west",
            "aws_subnet.dr",
            "aws_vpc.dr",
            "data.aws_ami.ubuntu_west",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:904233103130:instance/i-02743cad4cf20653c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02743cad4cf20653c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ccabc882614f9c5",
            "private_dns": "ip-172-20-1-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.76",
            "public_dns": "ec2-3-237-234-91.compute-1.amazonaws.com",
            "public_ip": "3.237.234.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-039264bb032ce75e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d47737bcd81aa780",
            "tags": {
              "Name": "linux-frontend-east-1"
            },
            "tags_all": {
              "Name": "linux-frontend-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc1f215113eacb80"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_east",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddac4b9aed8d5d46",
            "arn": "arn:aws:ec2:us-west-1:904233103130:instance/i-01b44e718b5e72469",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b44e718b5e72469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063f0f8773ade09fa",
            "private_dns": "ip-172-20-1-117.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.117",
            "public_dns": "ec2-13-52-97-5.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.97.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f642ce27288291c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d138f4f702cc156",
            "tags": {
              "Name": "linux-frontend-west-1"
            },
            "tags_all": {
              "Name": "linux-frontend-west-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0210929a0fe86e48d"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_west",
            "aws_security_group.web_sg_west",
            "aws_subnet.dr",
            "aws_vpc.dr",
            "data.aws_ami.ubuntu_west",
            "tls_private_key.auto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:internet-gateway/igw-034e107f87b219f93",
            "id": "igw-034e107f87b219f93",
            "owner_id": "904233103130",
            "tags": {
              "Name": "igw-dr"
            },
            "tags_all": {
              "Name": "igw-dr"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:internet-gateway/igw-031300f5d516f61be",
            "id": "igw-031300f5d516f61be",
            "owner_id": "904233103130",
            "tags": {
              "Name": "igw-prod"
            },
            "tags_all": {
              "Name": "igw-prod"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/9b5dabfedefe5278",
            "arn_suffix": "app/ALB-backend/9b5dabfedefe5278",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ALB-backend-1516257325.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/9b5dabfedefe5278",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f30d2e8ca52cef9e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b593d7a85b17ca0b"
              },
              {
                "subnet_id": "subnet-0d47737bcd81aa780"
              }
            ],
            "subnets": [
              "subnet-0b593d7a85b17ca0b",
              "subnet-0d47737bcd81aa780"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.backend_alb",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/1ac67be9255dda50",
            "arn_suffix": "app/ALB-frontend/1ac67be9255dda50",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-frontend-2036491607.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/1ac67be9255dda50",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0042998faee260a86"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b593d7a85b17ca0b"
              },
              {
                "subnet_id": "subnet-0d47737bcd81aa780"
              }
            ],
            "subnets": [
              "subnet-0b593d7a85b17ca0b",
              "subnet-0d47737bcd81aa780"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_frontend_sg",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-backend/9b5dabfedefe5278/98e0783abc6c7933",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/c953814f43059373",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-backend/9b5dabfedefe5278/98e0783abc6c7933",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/9b5dabfedefe5278",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.backend_alb",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-frontend/1ac67be9255dda50/efdf8dfcb53417f2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/5bc1b548680d5665",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-frontend/1ac67be9255dda50/efdf8dfcb53417f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/1ac67be9255dda50",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_frontend_sg",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/c953814f43059373",
            "arn_suffix": "targetgroup/ALB-backend-TG/c953814f43059373",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/c953814f43059373",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-backend-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/5bc1b548680d5665",
            "arn_suffix": "targetgroup/ALB-frontend-TG/5bc1b548680d5665",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/5bc1b548680d5665",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-frontend-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_backend_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-backend-dr/9b1374b71570daff",
            "arn_suffix": "targetgroup/tg-backend-dr/9b1374b71570daff",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-backend-dr/9b1374b71570daff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-backend-dr",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_frontend_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-frontend-dr/d926bf32de58e749",
            "arn_suffix": "targetgroup/tg-frontend-dr/d926bf32de58e749",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-frontend-dr/d926bf32de58e749",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-frontend-dr",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/c953814f43059373-2025090620565157990000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/c953814f43059373",
            "target_id": "i-0400be2e43d5812b6"
          },
          "dependencies": [
            "aws_instance.backend_east",
            "aws_key_pair.deployer_east",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/5bc1b548680d5665-20250906205647609700000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/5bc1b548680d5665",
            "target_id": "i-02743cad4cf20653c"
          },
          "dependencies": [
            "aws_instance.frontend_east",
            "aws_key_pair.deployer_east",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dr_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bde9a6ad653f2c3f",
            "association_id": "eipassoc-07c6803b4733b143a",
            "connectivity_type": "public",
            "id": "nat-0c74e35f74bc072a2",
            "network_interface_id": "eni-0e4ca4f6fd34aa47a",
            "private_ip": "172.20.1.160",
            "public_ip": "13.52.170.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d138f4f702cc156",
            "tags": {
              "Name": "nat-dr"
            },
            "tags_all": {
              "Name": "nat-dr"
            }
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a099e54d589ad82",
            "association_id": "eipassoc-0c41f428344c0e24f",
            "connectivity_type": "public",
            "id": "nat-0e7fedbfdba75f575",
            "network_interface_id": "eni-0c7753f42ad2b22e2",
            "private_ip": "172.20.1.79",
            "public_ip": "54.208.32.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d47737bcd81aa780",
            "tags": {
              "Name": "nat-prod"
            },
            "tags_all": {
              "Name": "nat-prod"
            }
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:route-table/rtb-0602d3cbd825c1c3f",
            "id": "rtb-0602d3cbd825c1c3f",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c74e35f74bc072a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-dr-private"
            },
            "tags_all": {
              "Name": "rt-dr-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:route-table/rtb-01330cd9af5300c5e",
            "id": "rtb-01330cd9af5300c5e",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034e107f87b219f93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-dr-public"
            },
            "tags_all": {
              "Name": "rt-dr-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:route-table/rtb-049aef8aea5482aa6",
            "id": "rtb-049aef8aea5482aa6",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e7fedbfdba75f575",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prod-private"
            },
            "tags_all": {
              "Name": "rt-prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:route-table/rtb-0b65bad6299bcf09e",
            "id": "rtb-0b65bad6299bcf09e",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031300f5d516f61be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prod-public"
            },
            "tags_all": {
              "Name": "rt-prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_priv_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb8bacd9f5f56e66",
            "route_table_id": "rtb-0602d3cbd825c1c3f",
            "subnet_id": "subnet-003081b997ffb65c8"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fbfdd1f447d1439",
            "route_table_id": "rtb-0602d3cbd825c1c3f",
            "subnet_id": "subnet-0af255412edec237a"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423bcea608421c5e",
            "route_table_id": "rtb-0602d3cbd825c1c3f",
            "subnet_id": "subnet-03366bf47289554c1"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1a343baddf834d8",
            "route_table_id": "rtb-0602d3cbd825c1c3f",
            "subnet_id": "subnet-0651b3a5d59f08519"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b2062f9a36db062",
            "route_table_id": "rtb-0602d3cbd825c1c3f",
            "subnet_id": "subnet-0f047dc43b5466446"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08693d7d051084b9d",
            "route_table_id": "rtb-0602d3cbd825c1c3f",
            "subnet_id": "subnet-053fd6d1f21e2307d"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "pub-sub-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a61bd6b58bf851a",
            "route_table_id": "rtb-01330cd9af5300c5e",
            "subnet_id": "subnet-02d138f4f702cc156"
          },
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_route_table.dr_public_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066e42e4119f8f165",
            "route_table_id": "rtb-01330cd9af5300c5e",
            "subnet_id": "subnet-0198a5116741da7e8"
          },
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_route_table.dr_public_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_priv_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0599bd905bbdd0c11",
            "route_table_id": "rtb-049aef8aea5482aa6",
            "subnet_id": "subnet-0aeb2168080fa1392"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e8c0e8d18a57925",
            "route_table_id": "rtb-049aef8aea5482aa6",
            "subnet_id": "subnet-0e1dc8e76b3320641"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9df4a0a519743a2",
            "route_table_id": "rtb-049aef8aea5482aa6",
            "subnet_id": "subnet-01b285a804bcfdca1"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024f2eb9f234c2a99",
            "route_table_id": "rtb-049aef8aea5482aa6",
            "subnet_id": "subnet-0371811307f8fe2a1"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbabcb62f2bfff2d",
            "route_table_id": "rtb-049aef8aea5482aa6",
            "subnet_id": "subnet-0ab1e11b099424796"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04576fa3151a29390",
            "route_table_id": "rtb-049aef8aea5482aa6",
            "subnet_id": "subnet-0f0922da130fdf3c7"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "pub-sub-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f020e47387a9f57",
            "route_table_id": "rtb-0b65bad6299bcf09e",
            "subnet_id": "subnet-0d47737bcd81aa780"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_public_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd850007265f3923",
            "route_table_id": "rtb-0b65bad6299bcf09e",
            "subnet_id": "subnet-0b593d7a85b17ca0b"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_public_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend_dr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0e1be858eac679559",
            "description": "Allow HTTP/HTTPS to frontend ALB in DR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1be858eac679559",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-dr-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-dr-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0042998faee260a86",
            "description": "Allow HTTP/HTTPS for frontend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0042998faee260a86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0f30d2e8ca52cef9e",
            "description": "Allow HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f30d2e8ca52cef9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backend-alb-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0efde62ffb121a525",
            "description": "Allow HTTP from backend ALB and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efde62ffb121a525",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB Backend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f30d2e8ca52cef9e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263b69113bafcf0e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-ec2-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_alb",
            "aws_security_group.bastion",
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ec2_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-03ad9c156d7e7642b",
            "description": "Allow HTTP and SSH (DR)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ad9c156d7e7642b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-ec2-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0263b69113bafcf0e",
            "description": "SSH access only from trusted IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0263b69113bafcf0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0904faf16124dee30",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0904faf16124dee30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-east-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0a6bba4c16a40b230",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6bba4c16a40b230",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-west-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0123cc0d510e94766",
            "description": "Allow HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0123cc0d510e94766",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "frontend-alb-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-096e2add85774c5b6",
            "description": "Allow HTTP from frontend ALB and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096e2add85774c5b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB Frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0123cc0d510e94766"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263b69113bafcf0e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-ec2-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.frontend_alb",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ec2_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-08e0fcdc005ee68f9",
            "description": "Allow HTTP and SSH (DR)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e0fcdc005ee68f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-ec2-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-00adbfadb3e90ab18",
            "description": "Allow MySQL/Aurora from backend EC2 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00adbfadb3e90ab18",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Backend EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0efde62ffb121a525"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_alb",
            "aws_security_group.backend_ec2",
            "aws_security_group.bastion",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0455c8bff1839e9b5",
            "description": "Allow MySQL/Aurora in DR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0455c8bff1839e9b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL ingress (adjust later)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-dr-sg"
            },
            "tags_all": {
              "Name": "rds-dr-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0fc1f215113eacb80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc1f215113eacb80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "temp-web-sg-east",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0210929a0fe86e48d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0210929a0fe86e48d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "temp-web-sg-west",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_frontend_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1799169664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-096e2add85774c5b6",
            "security_group_rule_id": "sgr-0a36b867ee513fdd8",
            "self": false,
            "source_security_group_id": "sg-0042998faee260a86",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_frontend_sg",
            "aws_security_group.bastion",
            "aws_security_group.frontend_alb",
            "aws_security_group.frontend_ec2",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_bastion_to_web_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1199406734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fc1f215113eacb80",
            "security_group_rule_id": "sgr-008d447b3979f27bb",
            "self": false,
            "source_security_group_id": "sg-0904faf16124dee30",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_east",
            "aws_security_group.web_sg_east",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_bastion_to_web_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1316781739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0210929a0fe86e48d",
            "security_group_rule_id": "sgr-09fa370e616786f7c",
            "self": false,
            "source_security_group_id": "sg-0a6bba4c16a40b230",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_west",
            "aws_security_group.web_sg_west",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-003081b997ffb65c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003081b997ffb65c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0af255412edec237a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af255412edec237a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-03366bf47289554c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03366bf47289554c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0651b3a5d59f08519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0651b3a5d59f08519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0f047dc43b5466446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f047dc43b5466446",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-053fd6d1f21e2307d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053fd6d1f21e2307d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pub-sub-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-02d138f4f702cc156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d138f4f702cc156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0198a5116741da7e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0198a5116741da7e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "vpc_id": "vpc-04ed3ce8471d0801f"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0aeb2168080fa1392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeb2168080fa1392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0e1dc8e76b3320641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1dc8e76b3320641",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-01b285a804bcfdca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b285a804bcfdca1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0371811307f8fe2a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371811307f8fe2a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0ab1e11b099424796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab1e11b099424796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0f0922da130fdf3c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0922da130fdf3c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pub-sub-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0d47737bcd81aa780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d47737bcd81aa780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0b593d7a85b17ca0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b593d7a85b17ca0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "vpc_id": "vpc-0fce9d5a568cd2f4e"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:vpc/vpc-04ed3ce8471d0801f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0d4f94cd8972f8946",
            "default_route_table_id": "rtb-0504a53d0826a586a",
            "default_security_group_id": "sg-06a0615e40268b3e3",
            "dhcp_options_id": "dopt-065c4e5d6dbe2919e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ed3ce8471d0801f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0504a53d0826a586a",
            "owner_id": "904233103130",
            "tags": {
              "Name": "vpc-dr"
            },
            "tags_all": {
              "Name": "vpc-dr"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:vpc/vpc-0fce9d5a568cd2f4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0029c28b96072f0ed",
            "default_route_table_id": "rtb-091677d70e111ccdb",
            "default_security_group_id": "sg-057556fd45e2a59f0",
            "dhcp_options_id": "dopt-0cb33106507678f7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fce9d5a568cd2f4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091677d70e111ccdb",
            "owner_id": "904233103130",
            "tags": {
              "Name": "vpc-prod"
            },
            "tags_all": {
              "Name": "vpc-prod"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}